tooltip 컴포넌트 추가

--- a/src/global.scss
+++ b/src/global.scss
@@ -1047,3 +1047,18 @@ h2.ant-typography {
     }
   }
 }
+
+.test {
+  .ant-tooltip-arrow {
+    &::before,
+    &::after {
+      background-color: #6152ed;
+    }
+  }
+  .ant-tooltip-inner {
+    background-color: #6152ed;
+    padding: 6px 12px;
+    font-size: 12px;
+    font-weight: 500;
+  }
+}
